--- a/app/src/main/res/layout/activity_sudoku.xml
+++ b/app/src/main/res/layout/activity_sudoku.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:minHeight="50dp"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -96,6 +97,22 @@
                 android:text="@string/button_clear"
                 android:textAlignment="center"
                 android:textAppearance="?textAppearanceHeadline6" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/btnSolve"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:clickable="true"
+                android:drawableStart="@drawable/ic_baseline_lightbulb_outline_24"
+                android:drawableTint="@color/white"
+                android:focusable="true"
+                android:foreground="?selectableItemBackground"
+                android:paddingVertical="8dp"
+                android:text="@string/button_solve"
+                android:textAlignment="center"
+                android:textAppearance="?textAppearanceHeadline6"
+                app:showIf="@{!view.isEditing}" />
         </LinearLayout>
 
         <androidx.constraintlayout.widget.Guideline
